--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -26,7 +26,7 @@
 <body>
   <!--Fixed inverse navbar-->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active" id="home">
-            <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home</a>
+            <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Inicio</a>
           </li>
           <li id="about"><a href="#about">Acerca de</a></li>
           <li id="contact" data-toggle="modal" data-target="#contactModal" data-whatever="@myaddress"><a href="#contact">Contacto</a></li>
@@ -79,41 +79,52 @@
   </div>
   <!--End contact Modal-->
 
-
-  <!--Begin page content-->
-  <div class="container">
-    <!--<div class="starter-template">-->
-      {% block content %}{% endblock %}
-    <!--</div>-->
-  </div>
-  <!--End page content-->
+<!--  <header id="header">
+    <div class="row">
+      <div class="col-md-4">
+        {% load staticfiles %}
+        <img src="{% static 'img/bootstrap.png' %}" alt="Bootstrap">
+      </div>
+    </div>
+  </header>-->
+  {% block content %}{% endblock %}
 
   <!--Footer-->
   <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-xs-6 col-md-4 footnav">
-          <h3><span class="glyphicon glyphicon-plus" aria-hidden="true">&nbsp;<strong>Sobre:</strong></span></h3>
+          <h3><i class="fa fa-plus"></i>&nbsp;<strong>Sobre:</strong></h3>
           <ul class="">
-            <li class=""><a href="#">Nosotros</a></li>
-            <li class=""><a href="#">Contacto</a></li>
-            <li class=""><a href="#">T&eacute;rminos de uso</a></li>
+            <li class=""><a href="#"><strong>Nosotros</strong></a></li>
+            <li class=""><a href="#"><strong>Contacto</strong></a></li>
+            <li class=""><a href="#"><strong>T&eacute;rminos de uso</strong></a></li>
           </ul>
         </div>
         <div class="col-xs-6 col-md-4 footnav">
-          <h3><span class="glyphicon glyphicon-info-sign" aria-hidden="true">&nbsp;<strong>Info:</strong></span></h3>
+          <h3><i class="fa fa-info"></i>&nbsp;<strong>Info:</strong></h3>
           <ul class="">
-            <li class=""><a href="#">Horarios</a></li>
+            <li class=""><a href="#"><strong>Extra</a></strong></li>
           </ul>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <h3><strong>Redes Sociales:</strong></h3>
+          <div class="row">
+            <a class="social-links" href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a class="social-links" href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a class="social-links" href="#"><i class="fa fa-google-plus-square fa-3x"></i></a>
+          </div>
         </div>
       </div>
     </div>
+    <br>
+    <br>
   </footer>
   <!--End Footer-->
 
   <!--Footer fixed-->
   <section class="footer-fixed">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-8">&copy;2014 Capu Page</div>
         <div class="col-xs-6 col-md-4">by Nano Molina</div>
