--- a/src/CapuPage/apps/core/templates/core/home.html
+++ b/src/CapuPage/apps/core/templates/core/home.html
@@ -1,58 +1,58 @@
 {% extends 'base.html'%}
 
+{% block title %}CapuPage 1.0 - Home{% endblock %}
+
 {% block links %}
   {% load staticfiles %}
   <link href="{% static 'core/css/home.css' %}" rel="stylesheet">
-  {% load staticfiles %}
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
   <!--Begin Carousel-->
 <section class="content">
   <div class="row">
-  <div class="col-md-12">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
+    <div class="col-md-12">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
 
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        {% load staticfiles %}
-        <img src="{% static 'core/img/slider/b1.png' %}" alt="Bootstrap" class="img-rounded">
-        <div class="carousel-caption">
-          <h6 align="center">Bootstrap</h6>
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            {% load staticfiles %}
+            <img src="{% static 'core/img/slider/b1.png' %}" alt="Bootstrap" class="img-rounded">
+            <div class="carousel-caption">
+              <h6 align="center">Bootstrap</h6>
+            </div>
+          </div>
+          <div class="item">
+            {% load staticfiles %}
+            <img src="{% static 'core/img/slider/b2.png' %}" alt="Portable" class="img-rounded">
+            <div class="carousel-caption">
+              <h6 align="center">Portable</h6>
+            </div>
+          </div>
+          <div class="item">
+            {% load staticfiles %}
+            <img src="{% static 'core/img/slider/b3.png' %}" alt="Bootstrap Icon" class="img-rounded">
+            <div class="carousel-caption">
+              <h6 align="center">Bootstrap Icon</h6>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="item">
-        {% load staticfiles %}
-        <img src="{% static 'core/img/slider/b2.png' %}" alt="Portable" class="img-rounded">
-        <div class="carousel-caption">
-          <h6 align="center">Portable</h6>
-        </div>
-      </div>
-      <div class="item">
-        {% load staticfiles %}
-        <img src="{% static 'core/img/slider/b3.png' %}" alt="Bootstrap Icon" class="img-rounded">
-        <div class="carousel-caption">
-          <h6 align="center">Bootstrap Icon</h6>
-        </div>
+
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
-
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  </div>
   </div>
   <!--End Carousel-->
 
@@ -83,6 +83,6 @@
       </p>
     </div>
   </div>
+  <!--End Content-->
 </section>
-    <!--End Content-->
 {% endblock %}
