--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="CapuWebPage">
   <meta name="author" content="Nano Molina">
-  <title>CapuPage 1.0</title>
+  <title>{% block title %}{% endblock %}</title>
   {% load staticfiles %}
   <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
   {% load staticfiles %}
@@ -14,6 +14,8 @@
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   {% load staticfiles %}
   <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
+  {% load staticfiles %}
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   {% load staticfiles %}
   <link href="{% static 'css/base.css' %}" rel="stylesheet">
   {% block links %}{% endblock %}
@@ -79,14 +81,6 @@
   </div>
   <!--End contact Modal-->
 
-<!--  <header id="header">
-    <div class="row">
-      <div class="col-md-4">
-        {% load staticfiles %}
-        <img src="{% static 'img/bootstrap.png' %}" alt="Bootstrap">
-      </div>
-    </div>
-  </header>-->
   {% block content %}{% endblock %}
 
   <!--Footer-->
