+ blog-category.html

--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active" id="home">
-            <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Inicio</a>
+            <a href="{% url 'core:home' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Inicio</a>
           </li>
           <li id="about"><a href="#about">Acerca de</a></li>
           <li id="contact" data-toggle="modal" data-target="#contactModal" data-whatever="@myaddress"><a href="#contact">Contacto</a></li>
