--- a/src/CapuPage/apps/post/templates/post/blog-post.html
+++ b/src/CapuPage/apps/post/templates/post/blog-post.html
@@ -25,8 +25,10 @@
         <hr>
         <p><span class="glyphicon glyphicon-time"></span> {{ post.created|date:"l t" }} de {{ post.created|date:"F"}} de {{ post.created|date:"Y"}} a las {{ post.created|date:"f"}}</p>
         <hr>
-        <img class="img-responsive" src="{{ post.image_url }}" alt="">
-        <hr>
+        {% if post.image != "" %}
+          <img class="img-responsive" src="{{ post.image_url }}" alt="">
+          <hr>
+        {% endif%}
         <p class="lead">{{ post.description }}</p>
         {{ post.content|safe }}
         <hr>
