--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -12,8 +12,8 @@
   <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
   {% load staticfiles %}
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  {% load staticfiles %}
-  <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
+<!--  {% load staticfiles %}
+  <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">-->
   {% load staticfiles %}
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   {% load staticfiles %}
@@ -27,7 +27,7 @@
 
 <body>
   <!--Fixed inverse navbar-->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -47,6 +47,9 @@
           <li id="about"><a href="#about">Acerca de</a></li>
           <li id="contact" data-toggle="modal" data-target="#contactModal" data-whatever="@myaddress"><a href="#contact">Contacto</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li id="login"><a href="#login" data-toggle="modal" data-target="#loginModal">Iniciar Sesion</a></li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -58,13 +61,17 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="contactModalLabel">Nuevo Mensaje</h4>
+          <h4 class="modal-title" id="contactModalLabel"><strong>Formulario de Contacto</strong></h4>
         </div>
         <div class="modal-body">
           <form role="form">
             <div class="form-group">
-              <label for="receiver-name" class="control-label">Destinatario:</label>
-              <input type="text" class="form-control" id="receiver-name">
+              <label for="name" class="control-label">Nombre:</label>
+              <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+              <label for="e-mail" class="control-label">Email:</label>
+              <input type="email" class="form-control" id="e-mail">
             </div>
             <div class="form-group">
               <label for="message-text" class="control-label">Mensaje:</label>
@@ -80,6 +87,35 @@
     </div>
   </div>
   <!--End contact Modal-->
+
+  <!--login Modal-->
+  <div class="modal fade bs-example-modal-sm" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="loginModalLabel"><strong>Iniciar Sesi&oacute;n</strong></h4>
+        </div>
+        <div class="modal-body">
+          <form role="form">
+            <div class="form-group">
+              <label for="user" class="control-label">Usuario:</label>
+              <input type="text" class="form-control" id="user">
+            </div>
+            <div class="form-group">
+              <label for="password" class="control-label">Contrase&ntilde;a:</label>
+              <input type="password" class="form-control" id="password">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-success">Ingresa</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--End login Modal-->
 
   {% block content %}{% endblock %}
 
