--- a/src/CapuPage/apps/core/templates/core/home.html
+++ b/src/CapuPage/apps/core/templates/core/home.html
@@ -48,7 +48,7 @@
 </header>
 
 <!-- Page Content -->
-<div class="container">
+<div class="container-fluid">
 
     <!-- Marketing Icons Section -->
     <div class="row">
