--- a/src/CapuPage/apps/post/templates/post/blog-post.html
+++ b/src/CapuPage/apps/post/templates/post/blog-post.html
@@ -9,7 +9,7 @@
 
 {% block content %}
   <!-- Page Content -->
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-lg-8">
         <h1>{{ post.title }}</h1>
