--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -12,8 +12,6 @@
   <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
   {% load staticfiles %}
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-<!--  {% load staticfiles %}
-  <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">-->
   {% load staticfiles %}
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   {% load staticfiles %}
@@ -42,13 +40,36 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active" id="home">
-            <a href="{% url 'core:home' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Inicio</a>
+            <a href="{% url 'core:home' %}"><i class="fa fa-home"></i>&nbsp;Inicio</a>
           </li>
           <li id="about"><a href="#about">Acerca de</a></li>
           <li id="contact" data-toggle="modal" data-target="#contactModal" data-whatever="@myaddress"><a href="#contact">Contacto</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li id="login"><a href="#login" data-toggle="modal" data-target="#loginModal">Iniciar Sesion</a></li>
+          {% if user.is_authenticated %}
+            <li id="user-log" class="dropdown-open" >
+              <a id="drop-log" class="dropdown-toggle" aria-expanded="true" role="button" aria-haspopup="true" data-toggle="dropdown" href="#">
+                <i class="fa fa-user fa-1x"></i>&nbsp;<strong>{{ user.username }}</strong>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="user-log" role="menu">
+                <li role="presentation">
+                  <a href="#" tabindex="-1" role="menuitem">Modificar Perfil</a>
+                </li>
+                <li role="presentation">
+                  <a href="#" tabindex="-1" role="menuitem">Configuraci&oacute;n de la Cuenta</a>
+                </li>
+                <li role="presentation">
+                  <a href="#" tabindex="-1" role="menuitem">Permisos Disponibles</a>
+                </li>
+                <li class="divider" role="presentation"></li>
+                <li role="presentation">
+                  <a href="{% url 'core:logout' %}" tabindex="-1" role="menuitem">Cerrar Cesi&oacute;n</a>
+                </li>
+              </ul>
+            </li>
+          {% else %}
+            <li id="login"><a href="#login" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user fa-1x"></i>&nbsp;Iniciar Sesi&oacute;n</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -88,6 +109,7 @@
   </div>
   <!--End contact Modal-->
 
+  {% if not user.is_authenticated %}
   <!--login Modal-->
   <div class="modal fade bs-example-modal-sm" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
@@ -97,25 +119,29 @@
           <h4 class="modal-title" id="loginModalLabel"><strong>Iniciar Sesi&oacute;n</strong></h4>
         </div>
         <div class="modal-body">
-          <form role="form">
+          <form role="form" method="POST" id="login-form" action="{% url 'core:login' %}">
+            {% csrf_token %}
             <div class="form-group">
               <label for="user" class="control-label">Usuario:</label>
-              <input type="text" class="form-control" id="user">
+              {{ login_form.username }}
+              {{ login_form.errors }}
             </div>
             <div class="form-group">
               <label for="password" class="control-label">Contrase&ntilde;a:</label>
-              <input type="password" class="form-control" id="password">
+              {{ login_form.password }}
+              {{ login_form.errors }}
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-success">Ingresa</button>
+          <button type="submit" class="btn btn-success" form="login-form">Ingresar</button>
         </div>
       </div>
     </div>
   </div>
   <!--End login Modal-->
+  {% endif %}
 
   {% block content %}{% endblock %}
 
