related posts in home page

--- a/src/CapuPage/apps/core/static/core/css/home.css
+++ b/src/CapuPage/apps/core/static/core/css/home.css
@@ -85,3 +85,15 @@ header.carousel .fill {
         height: 70%;
     }
 }
+
+
+/* Sections */
+
+/*#photos {
+    background-color: #123652;
+    background: url('http://images.forwallpaper.com/files/images/4/4907/490702ce/218013/mirror-lake-landscape-blue-sky-forest-trees-clouds-blue-sky-lake-water-reflection.jpg') repeat scroll 0% 0% / cover #000;
+}*/
+
+/*#groups {
+    background: url('http://images.forwallpaper.com/files/images/a/aa8c/aa8c290b/228453/blue-sea-summer-sea-beach-sky-clouds-sand-horizon-turquoise-landscape.jpg') repeat scroll 0% 100% / cover #A3D4F4;
+}*/
