--- a/src/CapuPage/templates/base.html
+++ b/src/CapuPage/templates/base.html
@@ -42,7 +42,7 @@
           <li class="active" id="home">
             <a href="{% url 'core:home' %}"><i class="fa fa-home"></i>&nbsp;Inicio</a>
           </li>
-          <li id="about"><a href="#about">Acerca de</a></li>
+          <li id="about"><a href="#">Acerca de</a></li>
           <li id="contact" data-toggle="modal" data-target="#contactModal" data-whatever="@myaddress"><a href="#contact">Contacto</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
